implementing UI component for the A9 report

--- a/src/app/report/report-parameter/report-parameter.component.html
+++ b/src/app/report/report-parameter/report-parameter.component.html
@@ -4,6 +4,7 @@
 		<ec-report-a4-a6 *ngSwitchCase="ReportType.A4"></ec-report-a4-a6>
 		<ec-report-a7 *ngSwitchCase="ReportType.A7"></ec-report-a7>
 		<ec-report-a8 *ngSwitchCase="ReportType.A8"></ec-report-a8>
+		<ec-report-a9 *ngSwitchCase="ReportType.A9"></ec-report-a9>
 		<ec-report-a11 *ngSwitchCase="ReportType.A11"></ec-report-a11>
 		<ec-report-a12 *ngSwitchCase="ReportType.A12"></ec-report-a12>
 		<button type="button" class="reset-button" mat-button (click)="resetInput()" obButton="tertiary">
