--- a/src/app/report/report-parameter/report-parameter.component.html
+++ b/src/app/report/report-parameter/report-parameter.component.html
@@ -3,6 +3,7 @@
 		<ec-report-a2 *ngSwitchCase="ReportType.A2"></ec-report-a2>
 		<ec-report-a7 *ngSwitchCase="ReportType.A7"></ec-report-a7>
 		<ec-report-a4-a6 *ngSwitchCase="ReportType.A4"></ec-report-a4-a6>
+		<ec-report-a9 *ngSwitchCase="ReportType.A9"></ec-report-a9>
 		<button type="button" class="reset-button" mat-button (click)="resetInput()" obButton="tertiary">
 			{{ "reports.reset-input" | translate }}
 		</button>
