translations changed, date-from-to-fieldset's label now configurable

--- a/src/app/report/report-parameter/_shared/date-from-to-fieldset/date-from-to-fieldset.component.html
+++ b/src/app/report/report-parameter/_shared/date-from-to-fieldset/date-from-to-fieldset.component.html
@@ -1,5 +1,5 @@
 <fieldset>
-	<legend>{{ "reports.dateFromTo.text" | translate }}</legend>
+	<legend>{{ label }}</legend>
 	<div class="period-container">
 		<mat-form-field>
 			<input
