--- a/src/app/report/report-parameter/report-a11/report-a11.component.html
+++ b/src/app/report/report-parameter/report-a11/report-a11.component.html
@@ -1,6 +1,10 @@
 <form [formGroup]="a11FormGroup" #ngForm="ngForm">
 	<h3>{{ "reports.a11.title" | translate }}</h3>
-	<ec-date-from-to-fieldset [dateFromFormControl]="dateFromFormControl" [dateToFormControl]="dateToFormControl">
+	<ec-date-from-to-fieldset
+		[dateFromFormControl]="dateFromFormControl"
+		[dateToFormControl]="dateToFormControl"
+		[label]="'reports.a11.dateFromTo.text' | translate"
+	>
 	</ec-date-from-to-fieldset>
 	<ec-data-room-selection-fieldset [dataRoomFormControl]="cantonFormControl"></ec-data-room-selection-fieldset>
 </form>
