Revert "format: clean code"
This reverts commit 55bf2f8a49d6a1b4b33a8c3f9f3b6be5ee128542.

--- a/src/app/report/report-parameter/report-a12/report-a12.component.html
+++ b/src/app/report/report-parameter/report-a12/report-a12.component.html
@@ -3,11 +3,9 @@
 	<p [innerHTML]="'reports.transferCodes.info' | translate"></p>
 	<p>{{ "reports.transferCodes.format" | translate }}</p>
 	<ng-container chipListFieldsetErrors>
-		<ng-container *ngIf="transferCodesFormControl.hasError('format')">{{
-			"reports.transferCodes.format.error" | translate
-		}}</ng-container>
-		<ng-container *ngIf="transferCodesFormControl.hasError('required')">{{
-			"i18n.validation.required" | translate
-		}}</ng-container>
+		<ng-container
+			*ngIf="transferCodesFormControl.hasError('format')">{{ "reports.transferCodes.format.error" | translate }}</ng-container>
+		<ng-container
+			*ngIf="transferCodesFormControl.hasError('required')">{{ "i18n.validation.required" | translate }}</ng-container>
 	</ng-container>
 </ec-chip-list-fieldset>
