--- a/src/app/report/report-parameter/report-parameter.component.html
+++ b/src/app/report/report-parameter/report-parameter.component.html
@@ -1,6 +1,7 @@
 <ng-container *ngIf="reportService.selectedReportType">
 	<ng-container [ngSwitch]="reportService.selectedReportType">
 		<ec-report-a2 *ngSwitchCase="ReportType.A2"></ec-report-a2>
+		<ec-report-a3-a5 *ngSwitchCase="ReportType.A3"></ec-report-a3-a5>
 		<ec-report-a4-a6 *ngSwitchCase="ReportType.A4"></ec-report-a4-a6>
 		<ec-report-a7 *ngSwitchCase="ReportType.A7"></ec-report-a7>
 		<ec-report-a8 *ngSwitchCase="ReportType.A8"></ec-report-a8>
