correcting declaration of the different search types (organisation/issuer) in report a4a6

--- a/src/app/report/report-parameter/report-a4-a6/report-a4-a6.component.html
+++ b/src/app/report/report-parameter/report-a4-a6/report-a4-a6.component.html
@@ -27,13 +27,13 @@
 	</fieldset>
 
 	<ec-unit-search
-		[hidden]="searchType !== 'organisation'"
+		[hidden]="searchType !== IssuerType.ORGANISATION"
 		[authority]="unitSearchAuthority$ | async"
 		[userIdsFormArray]="userIdsFormArray"
 	>
 	</ec-unit-search>
 	<ec-issuer-search
-		[hidden]="searchType !== 'issuer'"
+		[hidden]="searchType !== IssuerType.ISSUER"
 		[authority]="unitSearchAuthority$ | async"
 		[userIdsFormArray]="userIdsFormArray"
 	></ec-issuer-search>
