updated oblique from v6 to v7

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -5,11 +5,11 @@
 }
 
 .mat-card {
-	margin: $spacing-lg 0;
+	margin: $spacing-xl 0;
 }
 
 .mat-card > .mat-card-actions.actions {
-	padding-top: $spacing-lg;
+	padding-top: $spacing-xl;
 	margin-bottom: 0;
 	margin-right: 0;
 }
