updated oblique from v7 to v8

--- a/src/app/create/select-certificate-type/select-certificate-type.component.scss
+++ b/src/app/create/select-certificate-type/select-certificate-type.component.scss
@@ -9,7 +9,7 @@
 	.radio-button {
 		padding-bottom: 1rem;
 		margin-bottom: 1rem;
-		border-bottom: 0.0625rem solid $gray-light;
+		border-bottom: 0.0625rem solid $ob-gray-light;
 	}
 }
 
