--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -5,11 +5,11 @@
 }
 
 .mat-card {
-	margin: $spacing-xl 0;
+	margin: $ob-spacing-xl 0;
 }
 
 .mat-card > .mat-card-actions.actions {
-	padding-top: $spacing-xl;
+	padding-top: $ob-spacing-xl;
 	margin-bottom: 0;
 	margin-right: 0;
 }
@@ -18,8 +18,8 @@
 	font-size: 30px;
 	line-height: 40px;
 	text-align: center;
-	background-color: $brand-primary;
-	color: $white;
+	background-color: $ob-primary;
+	color: $ob-white;
 }
 
 .links {
