fixed breaking changes, mostly for angular-auth-oidc-client, but also some others; ng test not working yet

--- a/src/app/create/date-time-picker/date-time-picker.component.scss
+++ b/src/app/create/date-time-picker/date-time-picker.component.scss
@@ -1,5 +1,5 @@
-@import "~@oblique/oblique/styles/scss/core/variables";
-@import "~@oblique/oblique/styles/scss/core/mixins/layout";
+@import "@oblique/oblique/styles/scss/core/variables";
+@import "@oblique/oblique/styles/scss/core/mixins/layout";
 
 @include ob-media-breakpoint-up(sm) {
 	:host.datetime::ng-deep {
