--- a/src/app/create/shipping/shipping.component.scss
+++ b/src/app/create/shipping/shipping.component.scss
@@ -1,4 +1,4 @@
-@import "~@oblique/oblique/styles/scss/core/variables";
+@import "@oblique/oblique/styles/scss/core/variables";
 @import url(https://cdn.jsdelivr.net/gh/tonsky/FiraCode@5.2/distr/fira_code.css);
 
 .radio-label {
