--- a/src/app/create/vaccine-form/vaccine-form.component.scss
+++ b/src/app/create/vaccine-form/vaccine-form.component.scss
@@ -1,4 +1,4 @@
-@import "~@oblique/oblique/styles/scss/core/variables";
+@import "@oblique/oblique/styles/scss/core/variables";
 
 .from {
 	grid-column: span 2;
