--- a/src/app/report/select-report-type/select-report-type.component.scss
+++ b/src/app/report/select-report-type/select-report-type.component.scss
@@ -1,4 +1,4 @@
-@import "~@oblique/oblique/styles/scss/core/variables";
+@import "@oblique/oblique/styles/scss/core/variables";
 
 .container {
 	display: flex;
