--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,5 @@
-@import "~@oblique/oblique/styles/scss/core/variables";
-@import "~@oblique/oblique/styles/scss/core/mixins/layout";
+@import "@oblique/oblique/styles/scss/core/variables";
+@import "@oblique/oblique/styles/scss/core/mixins/layout";
 .mat-checkbox-layout {
 	white-space: normal !important;
 	text-align: justify;
