added cache button WIP

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,15 @@
 			</ng-container>
 		</ob-dropdown>
 	</ng-template>
+
+	<ng-container *ngIf="isAuthenticated$ | async">
+<!--		<ng-container *ecHasAuthorizationFor="AuthFunction.CLEAR_CACHES">-->
+			<ng-template #obHeaderControl>
+				<ec-cache-reset></ec-cache-reset>
+			</ng-template>
+<!--		</ng-container>-->
+	</ng-container>
+
 	<ng-container *ngIf="isAuthenticated$ | async">
 		<ng-template #obHeaderControl>
 			<button id="button-logout" [matTooltip]="'logout' | translate" class="ob-control-link" (click)="logout()">
