--- a/src/app/cache-reset/cache-reset.component.html
+++ b/src/app/cache-reset/cache-reset.component.html
@@ -1,3 +1,16 @@
-<button id="button-cache-reset" [matTooltip]="'Reset Cache' | translate" class="ob-control-link" (click)="resetCache()">
-	<span class="fa fa-sync-alt ob-control-icon"></span>
-</button>
+<div class="flex-container">
+	<h1>{{ "cache.reset.title" | translate }}</h1>
+	<p>{{ "cache.reset.subtitle" | translate }}</p>
+
+	<div class="container">
+		<mat-checkbox id="select-all-checkbox" [(ngModel)]="masterSelected" (change)="checkUncheckAll()">
+			<b> {{ "cache.reset.select" | translate }} </b></mat-checkbox>
+		<div class="caches" *ngFor="let item of checklist">
+			<mat-checkbox [(ngModel)]="item.isSelected" (change)="isAllSelected()">{{item.value}}</mat-checkbox>
+		</div>
+	</div>
+
+	<button id="reset-cache-button" mat-button obButton="primary" (click)="resetCache()">
+		{{ "cache.reset.resetCaches" | translate }}
+	</button>
+</div>
