--- a/src/app/cache-reset/cache-reset.component.html
+++ b/src/app/cache-reset/cache-reset.component.html
@@ -1,16 +1,14 @@
 <div class="flex-container">
 	<h1>{{ "cache.reset.title" | translate }}</h1>
 	<p>{{ "cache.reset.subtitle" | translate }}</p>
-
 	<div class="container">
-		<mat-checkbox id="select-all-checkbox" [(ngModel)]="masterSelected" (change)="checkUncheckAll()">
+		<mat-checkbox (change)="checkUncheckAll()" [(ngModel)]="masterSelected" id="select-all-checkbox">
 			<b> {{ "cache.reset.select" | translate }} </b></mat-checkbox>
-		<div class="caches" *ngFor="let item of checklist">
-			<mat-checkbox [(ngModel)]="item.isSelected" (change)="isAllSelected()">{{item.value}}</mat-checkbox>
+		<div *ngFor="let item of checklist" class="caches">
+			<mat-checkbox (change)="isAllSelected()" [(ngModel)]="item.isSelected">{{item.value}}</mat-checkbox>
 		</div>
 	</div>
-
-	<button id="reset-cache-button" mat-button obButton="primary" (click)="resetCache()">
+	<button (click)="resetCache()" id="reset-cache-button" mat-button obButton="primary">
 		{{ "cache.reset.resetCaches" | translate }}
 	</button>
 </div>
