--- a/src/app/cache-reset/cache-reset.component.html
+++ b/src/app/cache-reset/cache-reset.component.html
@@ -2,8 +2,13 @@
 	<h1>{{ "cache.reset.title" | translate }}</h1>
 	<p>{{ "cache.reset.subtitle" | translate }}</p>
 	<div class="container">
-		<mat-checkbox (change)="checkUncheckAll()" [indeterminate]="masterSelected === null && !allUnselected" [(ngModel)]="masterSelected" id="select-all-checkbox">
-			<b> {{ "cache.reset.select" | translate }} </b></mat-checkbox
+		<mat-checkbox
+			(change)="checkUncheckAll()"
+			[indeterminate]="masterSelected === null && !allUnselected"
+			[(ngModel)]="masterSelected"
+			id="select-all-checkbox"
+		>
+			<strong> {{ "cache.reset.select" | translate }} </strong></mat-checkbox
 		>
 		<div *ngFor="let item of checklist" class="caches">
 			<mat-checkbox (change)="isAllSelected()" [(ngModel)]="item.isSelected">{{ item.value }}</mat-checkbox>
