--- a/src/app/report/report-parameter/report-parameter.component.html
+++ b/src/app/report/report-parameter/report-parameter.component.html
@@ -8,6 +8,7 @@
 		<ec-report-a9 *ngSwitchCase="ReportType.A9"></ec-report-a9>
 		<ec-report-a11 *ngSwitchCase="ReportType.A11"></ec-report-a11>
 		<ec-report-a12 *ngSwitchCase="ReportType.A12"></ec-report-a12>
+		<ec-report-a13 *ngSwitchCase="ReportType.A13"></ec-report-a13>
 		<button type="button" class="reset-button" mat-button (click)="resetInput()" obButton="tertiary">
 			{{ "reports.reset-input" | translate }}
 		</button>
