button enable/disable fixed, version updated

--- a/src/app/cache-reset/cache-reset.component.html
+++ b/src/app/cache-reset/cache-reset.component.html
@@ -9,7 +9,7 @@
 			<mat-checkbox (change)="isAllSelected()" [(ngModel)]="item.isSelected">{{ item.value }}</mat-checkbox>
 		</div>
 	</div>
-	<button (click)="resetCache()" id="reset-cache-button" [disabled]="indeterminate" mat-button obButton="primary">
+	<button (click)="resetCache()" id="reset-cache-button" [disabled]="allUnselected" mat-button obButton="primary">
 		{{ "cache.reset.resetCaches" | translate }}
 	</button>
 </div>
