infobox for data limit added

--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -1,3 +1,10 @@
+<div class="infobox mat-horizontal-content-container">
+	<mat-card>
+		<mat-card-content>
+			{{ "reports.datalimit.description" | translate }}
+		</mat-card-content>
+	</mat-card>
+</div>
 <mat-horizontal-stepper linear labelPosition="bottom" #stepper class="mat-stepper-lg">
 	<mat-step>
 		<ec-select-report-type></ec-select-report-type>
