--- a/src/app/report/report.component.scss
+++ b/src/app/report/report.component.scss
@@ -1,5 +1,9 @@
 @import "@oblique/oblique/styles/scss/core/variables";
 
+div.infobox {
+  width: 90vw;
+}
+
 mat-horizontal-stepper {
 	width: 90vw;
 
